Changed the links for the script file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Javascript Task Manager</title>
   </head>
   <body>
@@ -40,6 +40,6 @@
     </section>
 
     <footer><small>&copy; Copyright 2021  Eduard Gavrila</small></footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
