Finished adding the modal with backdrop for updating tasks

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <title>Javascript Task Manager</title>
   </head>
   <body>
+     <div id="modal" class="backdrop hidden"></div>
     <header>
       <h1>Task Manager</h1>
       <button id="show-form">Show Form</button>
+     
     </header>
 
-    <section class="task-input hidden">
+    <section class="task-input">
       <form class="task-form">
         <label for="date">Date</label>
         <input type="date" id="date" />
