--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </section>
 
     <footer><small>&copy; Copyright 2021  Eduard Gavrila</small></footer>
-    <script src="./script.js"></script>
+    <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
