Fixed wrong button name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <div id="modal" class="backdrop hidden"></div>
     <header>
       <h1>Task Manager</h1>
-      <button id="show-form">Show Form</button>
+      <button id="show-form">Hide Form</button>
      
     </header>
 
