Added the task completed option

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <div>
           <label for="reminder">Set Remainder</label>
           <input type="checkbox" id="reminder" />
+          <label for="completed">Task Already Completed</label>
+          <input type="checkbox" id="completed"/>
         </div>
         <button type="submit">Add Task</button>
       </form>
