--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <h1>Task Manager</h1>
       <div class = "nav-btn-container">
-        <button class="help-btn"><i class="fas fa-2x fa-question-circle"></i></button>
+        <button class="help-btn" id="help-btn"><i class="fas fa-2x fa-question-circle"></i></button>
         <button id="show-form">Hide Form</button>
       </div>
     </header>
@@ -45,5 +45,6 @@
 
     <footer><small>&copy; Copyright 2021 Eduard Gavrila</small></footer>
     <script src="script.js" type="text/javascript"></script>
+    <script src="help.js" type="text/javascript"></script>
   </body>
 </html>
